--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -3,19 +3,19 @@ on: push
 
 jobs:
   ubuntu:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
-    - run: date
+      - run: date
   windows:    
-    runs-on: windows_latest
+    runs-on: windows-latest
     steps:
-    - run: date
+      - run: date
   macos:
-      runs-on: macos_latest
-      steps:
+    runs-on: macos-latest
+    steps:
       - run: date
   otherjob:
-      needs: [ubuntu, windows, macos]
-      runs-on: ubuntu_latest
-      steps:
+    needs: [ubuntu, windows, macos]
+    runs-on: ubuntu-latest
+    steps:
       - run: date
